Merge 1.1.1 to trunk